--- a/categorias.html
+++ b/categorias.html
@@ -7,223 +7,273 @@
     <link rel="icon" type="image/png" href="/icono.png" />
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+    />
   </head>
   <body class="bg-light">
-    <div class="container py-4">
-      <div
-        class="d-flex flex-wrap justify-content-between align-items-center mb-4"
-      >
-        <div class="me-3">
-          <h1 class="h4 mb-1">Categorías</h1>
-          <p class="text-muted mb-0" id="categorias-welcome">
-            Cargando usuario…
-          </p>
+    <div class="dashboard-layout d-flex min-vh-100">
+      <aside class="dashboard-sidebar d-flex flex-column">
+        <div class="sidebar-brand d-flex align-items-center mb-4">
+          <img src="/icono.png" alt="gestioncom" class="sidebar-logo me-2" />
+          <span class="sidebar-brand-text">gestioncom</span>
         </div>
 
-        <div class="d-flex gap-2">
-          <a href="/dashboard.html" class="btn btn-outline-secondary btn-sm"
-            >← Panel de control</a
-          >
-          <button id="logout-btn" class="btn btn-outline-danger btn-sm">
-            Cerrar sesión
-          </button>
-        </div>
-      </div>
+        <nav class="sidebar-nav flex-grow-1" aria-label="Navegación principal">
+          <a href="/dashboard.html" class="sidebar-link">
+            <i class="bi bi-speedometer2 me-2"></i> Panel
+          </a>
+          <a href="/productos.html" class="sidebar-link">
+            <i class="bi bi-box-seam me-2"></i> Productos
+          </a>
+          <a href="/categorias.html" class="sidebar-link active">
+            <i class="bi bi-tags me-2"></i> Categorías
+          </a>
+          <a href="/usersCard.html" class="sidebar-link">
+            <i class="bi bi-people me-2"></i> Usuarios
+          </a>
+          <a href="/mov.html" class="sidebar-link">
+            <i class="bi bi-arrow-left-right me-2"></i> Movimientos
+          </a>
+        </nav>
+      </aside>
 
-      <div class="card shadow-sm mb-4">
-        <div class="card-body">
-          <form id="filtros-form" class="row gy-3 gx-3 align-items-end">
-            <div class="col-12 col-md-5">
-              <label for="search" class="form-label mb-1">Buscar</label>
-              <input
-                type="search"
-                id="search"
-                class="form-control"
-                placeholder="Nombre de categoría"
-                autocomplete="off"
-              />
-            </div>
+      <main class="dashboard-main">
+        <div
+          class="d-flex justify-content-between align-items-center mb-4 dashboard-header"
+        >
+          <div class="me-3">
+            <h1 class="h4 mb-1">Categorías</h1>
+            <p class="text-muted mb-0" id="categorias-welcome">
+              Cargando usuario…
+            </p>
+          </div>
 
-            <div class="col-6 col-md-3">
-              <label for="orderBy" class="form-label mb-1">Ordenar por</label>
-              <select id="orderBy" class="form-select">
-                <option value="createdAt" selected>Más recientes</option>
-                <option value="nombre">Nombre</option>
-                <option value="updatedAt">Actualizados</option>
-                <option value="id">ID</option>
-              </select>
-            </div>
-
-            <div class="col-6 col-md-2">
-              <label for="orderDir" class="form-label mb-1">Dirección</label>
-              <select id="orderDir" class="form-select">
-                <option value="DESC" selected>DESC</option>
-                <option value="ASC">ASC</option>
-              </select>
-            </div>
-
-            <div class="col-6 col-md-2">
-              <label for="pageSize" class="form-label mb-1">Límite</label>
-              <select id="pageSize" class="form-select">
-                <option value="10">10</option>
-                <option value="20" selected>20</option>
-                <option value="50">50</option>
-                <option value="100">100</option>
-              </select>
-            </div>
-
-            <div class="col-6 col-md-12 d-flex justify-content-md-end">
-              <button
-                id="btn-crear"
-                type="button"
-                class="btn btn-primary d-none"
-                data-role="admin-only"
-                data-bs-toggle="modal"
-                data-bs-target="#modalCrear"
-              >
-                + Crear categoría
-              </button>
-            </div>
-          </form>
-        </div>
-      </div>
-
-      <div class="card shadow-sm">
-        <div class="card-body p-0">
-          <div class="table-responsive">
-            <table
-              class="table table-hover align-middle mb-0"
-              id="tabla-categorias"
+          <div class="d-flex gap-2">
+            <a href="/dashboard.html" class="btn btn-outline-secondary btn-sm"
+              >← Panel de control</a
             >
-              <thead class="table-light">
-                <tr>
-                  <th style="width: 72px">ID</th>
-                  <th>Nombre</th>
-                  <th>Creado</th>
-                  <th class="text-end" style="width: 160px">Acciones</th>
-                </tr>
-              </thead>
-              <tbody id="tbody-categorias"></tbody>
-            </table>
+            <button id="logout-btn" class="btn btn-outline-danger btn-sm">
+              Cerrar sesión
+            </button>
           </div>
         </div>
-      </div>
 
-      <div class="d-flex justify-content-between align-items-center mt-3">
-        <div id="categorias-paging-info" class="text-muted small">Página 1</div>
-        <div class="btn-group">
-          <button id="btn-prev" class="btn btn-outline-secondary btn-sm">
-            Anterior
-          </button>
-          <button id="btn-next" class="btn btn-outline-secondary btn-sm">
-            Siguiente
-          </button>
-        </div>
-      </div>
-
-      <div
-        id="categorias-alert"
-        class="alert alert-danger mt-3 d-none"
-        role="alert"
-      ></div>
-
-      <div class="modal fade" id="modalCrear" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-          <div class="modal-content">
-            <form id="form-crear">
-              <div class="modal-header">
-                <h5 class="modal-title">Crear categoría</h5>
-                <button
-                  type="button"
-                  class="btn-close"
-                  data-bs-dismiss="modal"
-                  aria-label="Cerrar"
-                ></button>
+        <div class="card shadow-sm mb-4">
+          <div class="card-body">
+            <form id="filtros-form" class="row gy-3 gx-3 align-items-end">
+              <div class="col-12 col-md-5">
+                <label for="search" class="form-label mb-1">Buscar</label>
+                <input
+                  type="search"
+                  id="search"
+                  class="form-control"
+                  placeholder="Nombre de categoría"
+                  autocomplete="off"
+                />
               </div>
-              <div class="modal-body">
-                <div class="mb-3">
-                  <label for="crear-nombre" class="form-label">Nombre</label>
-                  <input
-                    type="text"
-                    id="crear-nombre"
-                    class="form-control"
-                    required
-                  />
-                </div>
-                <div class="form-text">
-                  * Solo administradores pueden crear categorías.
-                </div>
+
+              <div class="col-6 col-md-3">
+                <label for="orderBy" class="form-label mb-1">Ordenar por</label>
+                <select id="orderBy" class="form-select">
+                  <option value="createdAt" selected>Más recientes</option>
+                  <option value="nombre">Nombre</option>
+                  <option value="updatedAt">Actualizados</option>
+                  <option value="id">ID</option>
+                </select>
               </div>
-              <div class="modal-footer">
+
+              <div class="col-6 col-md-2">
+                <label for="orderDir" class="form-label mb-1">Dirección</label>
+                <select id="orderDir" class="form-select">
+                  <option value="DESC" selected>DESC</option>
+                  <option value="ASC">ASC</option>
+                </select>
+              </div>
+
+              <div class="col-6 col-md-2">
+                <label for="pageSize" class="form-label mb-1">Límite</label>
+                <select id="pageSize" class="form-select">
+                  <option value="10">10</option>
+                  <option value="20" selected>20</option>
+                  <option value="50">50</option>
+                  <option value="100">100</option>
+                </select>
+              </div>
+
+              <div class="col-6 col-md-12 d-flex justify-content-md-end">
                 <button
+                  id="btn-crear"
                   type="button"
-                  class="btn btn-light"
-                  data-bs-dismiss="modal"
-                >
-                  Cancelar
-                </button>
-                <button
-                  id="crear-guardar"
-                  type="submit"
                   class="btn btn-primary d-none"
                   data-role="admin-only"
+                  data-bs-toggle="modal"
+                  data-bs-target="#modalCrear"
                 >
-                  Guardar
+                  + Crear categoría
                 </button>
               </div>
             </form>
           </div>
         </div>
-      </div>
 
-      <div class="modal fade" id="modalEditar" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-          <div class="modal-content">
-            <form id="form-editar">
-              <div class="modal-header">
-                <h5 class="modal-title">Editar categoría</h5>
-                <button
-                  type="button"
-                  class="btn-close"
-                  data-bs-dismiss="modal"
-                  aria-label="Cerrar"
-                ></button>
-              </div>
-              <div class="modal-body">
-                <input type="hidden" id="editar-id" />
-                <div class="mb-3">
-                  <label for="editar-nombre" class="form-label">Nombre</label>
-                  <input
-                    type="text"
-                    id="editar-nombre"
-                    class="form-control"
-                    required
-                  />
-                </div>
-              </div>
-              <div class="modal-footer">
-                <button
-                  type="button"
-                  class="btn btn-light"
-                  data-bs-dismiss="modal"
-                >
-                  Cancelar
-                </button>
-                <button
-                  id="editar-guardar"
-                  type="submit"
-                  class="btn btn-primary d-none"
-                  data-role="admin-only"
-                >
-                  Guardar cambios
-                </button>
-              </div>
-            </form>
+        <div class="card shadow-sm">
+          <div class="card-body p-0">
+            <div class="table-responsive">
+              <table
+                class="table table-hover align-middle mb-0"
+                id="tabla-categorias"
+              >
+                <thead class="table-light">
+                  <tr>
+                    <th style="width: 72px">ID</th>
+                    <th>Nombre</th>
+                    <th>Creado</th>
+                    <th class="text-end" style="width: 160px">Acciones</th>
+                  </tr>
+                </thead>
+                <tbody id="tbody-categorias"></tbody>
+              </table>
+            </div>
           </div>
         </div>
-      </div>
+
+        <div class="d-flex justify-content-between align-items-center mt-3">
+          <div id="paging-info" class="text-muted small">Página 1</div>
+          <div class="btn-group">
+            <button id="btn-prev" class="btn btn-outline-secondary btn-sm">
+              <i class="bi bi-chevron-left">Anterior</i>
+            </button>
+            <button id="btn-next" class="btn btn-outline-secondary btn-sm">
+              <i class="bi bi-chevron-right">Siguiente</i>
+            </button>
+          </div>
+        </div>
+
+        <div
+          id="categorias-alert"
+          class="alert alert-danger mt-3 d-none"
+          role="alert"
+        ></div>
+
+        <div
+          class="modal fade"
+          id="modalCrear"
+          tabindex="-1"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              <form id="form-crear">
+                <div class="modal-header">
+                  <h5 class="modal-title">Crear categoría</h5>
+                  <button
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                    aria-label="Cerrar"
+                  ></button>
+                </div>
+                <div class="modal-body">
+                  <div class="mb-3">
+                    <label for="crear-nombre" class="form-label">Nombre</label>
+                    <input
+                      type="text"
+                      id="crear-nombre"
+                      class="form-control"
+                      required
+                    />
+                  </div>
+                </div>
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    class="btn btn-light"
+                    data-bs-dismiss="modal"
+                  >
+                    Cancelar
+                  </button>
+                  <button
+                    id="crear-guardar"
+                    type="submit"
+                    class="btn btn-primary d-none"
+                    data-role="admin-only"
+                  >
+                    Guardar
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="modal fade"
+          id="modalEditar"
+          tabindex="-1"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              <form id="form-editar">
+                <div class="modal-header">
+                  <h5 class="modal-title">Editar categoría</h5>
+                  <button
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                    aria-label="Cerrar"
+                  ></button>
+                </div>
+                <div class="modal-body">
+                  <input type="hidden" id="editar-id" />
+                  <div class="mb-3">
+                    <label for="editar-nombre" class="form-label">Nombre</label>
+                    <input
+                      type="text"
+                      id="editar-nombre"
+                      class="form-control"
+                      required
+                    />
+                  </div>
+                </div>
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    class="btn btn-light"
+                    data-bs-dismiss="modal"
+                  >
+                    Cancelar
+                  </button>
+                  <button
+                    id="editar-guardar"
+                    type="submit"
+                    class="btn btn-primary d-none"
+                    data-role="admin-only"
+                  >
+                    Guardar cambios
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </main>
     </div>
-
+    <footer class="dashboard-footer text-center py-3">
+      <a
+        class="footer-brand text-decoration-none"
+        href="https://www.instagram.com/jordiv.1/"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        © 2025 – Desarrollado por <span class="fw-semibold">Jordi Velasco</span>
+        <br />
+        <i class="bi bi-instagram me-1"></i>
+        <span>jordiv.1</span>
+      </a>
+    </footer>
     <script type="module" src="/src/pages/categoriasPage.js"></script>
   </body>
 </html>
