--- a/unauthorized.html
+++ b/unauthorized.html
@@ -25,8 +25,8 @@
   >
     <div class="card shadow-sm text-center p-4 unauth-card w-100">
       <img
-        src="/guardian400.JPG"
-        alt="Guardia"
+        src="/guardian403.JPG"
+        alt="Guardian"
         class="img-fluid mb-3"
         style="max-height: 550px; width: 100%; object-fit: contain"
       />
