--- a/usersCard.html
+++ b/usersCard.html
@@ -6,96 +6,146 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/png" href="/icono.png" />
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
-
     <link rel="stylesheet" href="/css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+    />
   </head>
 
   <body class="bg-light">
-    <div class="container py-4">
-      <!-- HEADER -->
-      <div class="d-flex justify-content-between align-items-center mb-4">
-        <div>
-          <h1 class="h4 mb-1">Usuarios</h1>
-          <p class="text-muted mb-0" id="usuarios-welcome"></p>
+    <div class="dashboard-layout d-flex min-vh-100">
+      <aside class="dashboard-sidebar d-flex flex-column">
+        <div class="sidebar-brand d-flex align-items-center mb-4">
+          <img src="/icono.png" alt="gestioncom" class="sidebar-logo me-2" />
+          <span class="sidebar-brand-text">gestioncom</span>
         </div>
-        <div class="d-flex gap-2">
-          <a href="/dashboard.html" class="btn btn-outline-secondary btn-sm"
-            >← Panel de control</a
-          >
-          <button id="logout-btn" class="btn btn-outline-danger btn-sm">
-            Cerrar sesión
-          </button>
+
+        <nav class="sidebar-nav flex-grow-1" aria-label="Navegación principal">
+          <a href="/dashboard.html" class="sidebar-link">
+            <i class="bi bi-speedometer2 me-2"></i> Panel
+          </a>
+          <a href="/productos.html" class="sidebar-link">
+            <i class="bi bi-box-seam me-2"></i> Productos
+          </a>
+          <a href="/categorias.html" class="sidebar-link">
+            <i class="bi bi-tags me-2"></i> Categorías
+          </a>
+          <a href="/usersCard.html" class="sidebar-link active">
+            <i class="bi bi-people me-2"></i> Usuarios
+          </a>
+          <a href="/mov.html" class="sidebar-link">
+            <i class="bi bi-arrow-left-right me-2"></i> Movimientos
+          </a>
+        </nav>
+      </aside>
+      <main class="dashboard-main">
+       
+        <div
+          class="d-flex justify-content-between align-items-center mb-4 dashboard-header"
+        >
+          <div>
+            <h1 class="h4 mb-1">Usuarios</h1>
+            <p class="text-muted mb-0" id="usuarios-welcome"></p>
+          </div>
+          <div class="d-flex gap-2">
+            <a href="/dashboard.html" class="btn btn-outline-secondary btn-sm"
+              >← Panel de control</a
+            >
+            <button id="logout-btn" class="btn btn-outline-danger btn-sm">
+              Cerrar sesión
+            </button>
+          </div>
         </div>
-      </div>
 
-      <!-- FILTROS -->
-      <div class="card shadow-sm mb-4">
-        <div class="card-body">
-          <div class="row g-3">
-            <div class="col-md-4">
-              <label class="form-label">Buscar</label>
-              <input
-                id="search"
-                type="text"
-                class="form-control"
-                placeholder="Nombre…"
-              />
-            </div>
+        <div class="card shadow-sm mb-4">
+          <div class="card-body">
+            <div class="row g-3">
+              <div class="col-md-4">
+                <label class="form-label">Buscar</label>
+                <input
+                  id="search"
+                  type="text"
+                  class="form-control"
+                  placeholder="Nombre…"
+                />
+              </div>
 
-            <div class="col-md-4">
-              <label class="form-label">Ordenar por</label>
-              <select id="orderBy" class="form-select">
-                <option value="createdAt">Fecha creación</option>
-                <option value="nombre">Nombre</option>
-                <option value="rolId">Rol</option>
-              </select>
-            </div>
+              <div class="col-md-4">
+                <label class="form-label">Ordenar por</label>
+                <select id="orderBy" class="form-select">
+                  <option value="createdAt">Fecha creación</option>
+                  <option value="nombre">Nombre</option>
+                  <option value="rolId">Rol</option>
+                </select>
+              </div>
 
-            <div class="col-md-2">
-              <label class="form-label">Dirección</label>
-              <select id="orderDir" class="form-select">
-                <option value="DESC">DESC</option>
-                <option value="ASC">ASC</option>
-              </select>
-            </div>
+              <div class="col-md-2">
+                <label class="form-label">Dirección</label>
+                <select id="orderDir" class="form-select">
+                  <option value="DESC">DESC</option>
+                  <option value="ASC">ASC</option>
+                </select>
+              </div>
 
-            <div class="col-md-2">
-              <label class="form-label">Mostrar</label>
-              <select id="pageSize" class="form-select">
-                <option value="10">10</option>
-                <option value="20" selected>20</option>
-                <option value="50">50</option>
-              </select>
+              <div class="col-md-2">
+                <label class="form-label">Mostrar</label>
+                <select id="pageSize" class="form-select">
+                  <option value="10">10</option>
+                  <option value="20" selected>20</option>
+                  <option value="50">50</option>
+                </select>
+              </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <!-- ALERT -->
-      <div id="usuarios-alert" class="alert alert-danger d-none"></div>
+        <div id="usuarios-alert" class="alert alert-danger d-none"></div>
 
-      <!-- GRID DE TARJETAS -->
-      <div class="card shadow-sm mb-4">
-        <div class="card-body">
-          <div
-            id="usuarios-grid"
-            class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4"
-          ></div>
+        <!-- GRID  TARJETAS -->
+        <div class="card shadow-sm mb-4">
+          <div class="card-body">
+            <div
+              id="usuarios-grid"
+              class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4"
+            ></div>
+          </div>
         </div>
-      </div>
 
-      <!-- PAGINACIÓN -->
-      <div class="d-flex justify-content-between align-items-center mt-3">
-        <button id="btn-prev" class="btn btn-outline-secondary">
-          Anterior
-        </button>
-        <span id="usuarios-paging-info" class="text-muted"></span>
-        <button id="btn-next" class="btn btn-outline-secondary">
-          Siguiente
-        </button>
-      </div>
+        <div class="d-flex justify-content-between align-items-center mt-2">
+          <div class="text-muted small" id="paging-info">Página 1</div>
+          <div class="btn-group btn-group-sm" role="group">
+            <button
+              type="button"
+              class="btn btn-outline-secondary"
+              id="btn-prev"
+            >
+              <i class="bi bi-chevron-left">Anterior</i>
+            </button>
+            <button
+              type="button"
+              class="btn btn-outline-secondary"
+              id="btn-next"
+            >
+              <i class="bi bi-chevron-right">Siguiente</i>
+            </button>
+          </div>
+        </div>
+      </main>
     </div>
-
+    <footer class="dashboard-footer text-center py-3">
+      <a
+        class="footer-brand text-decoration-none"
+        href="https://www.instagram.com/jordiv.1/"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        © 2025 – Desarrollado por <span class="fw-semibold">Jordi Velasco</span>
+        <br />
+        <i class="bi bi-instagram me-1"></i>
+        <span>jordiv.1</span>
+      </a>
+    </footer>
     <script type="module" src="/src/pages/usersPage.js"></script>
   </body>
 </html>
