feat(ui): add profile page with avatar upload and live preview

--- a/mov.html
+++ b/mov.html
@@ -22,6 +22,9 @@
         </div>
 
         <nav class="sidebar-nav flex-grow-1" aria-label="Navegación principal">
+          <a href="/perfilUsuario.html" class="sidebar-link">
+            <i class="bi bi-person-circle me-2"></i> Perfil
+          </a>
           <a href="/dashboard.html" class="sidebar-link">
             <i class="bi bi-speedometer2 me-2"></i> Panel
           </a>
