--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/icono.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="/icono.png" />
     <title>Login - Inventarios</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
 
